crates/vize_s2_to_s3/tests/snapshots/extraction_snapshots__o0_measures_nothing_and_keeps_every_op_inline.snap
---
source: crates/vize_s2_to_s3/tests/extraction_snapshots.rs
expression: "decisions(BRANCH_AND_HANDLER, OptTier::O0)"
---
[s3-placement-folio]

[s3-placement-folio.placements]
op=2 alternatives=inline,hoist leader=- chosen=inline
op=7 alternatives=inline,cache leader=- chosen=inline

[s3-extraction-folio]
tier=O0
candidate_budget=0
budget_left=0
emitted_size_before=182
emitted_size_after=182
reactive_edges_before=2
reactive_edges_after=2
update_path_before=6
update_path_after=6

[s3-extraction-folio.decisions]
op=2 placement=hoist kind=missed reason=budget-exhausted span=9:43 size=0 edges=0 path=0 budget=0
op=7 placement=cache kind=missed reason=budget-exhausted span=51:64 size=0 edges=0 path=0 budget=0

[remarks]

[remarks.entries]
s3.extract-placements missed hoist @9:43 reason="budget-exhausted" emitted-size=0 reactive-edges=0 update-path=0 budget-left=0
s3.extract-placements missed cache @51:64 reason="budget-exhausted" emitted-size=0 reactive-edges=0 update-path=0 budget-left=0
