crates/vize_s2_to_s3/tests/snapshots/extraction_snapshots__surface_battery_extracts_at_o3.snap
---
source: crates/vize_s2_to_s3/tests/extraction_snapshots.rs
expression: output
---
# kitchen_sink
[s3-placement-folio]

[s3-placement-folio.placements]
op=3 alternatives=inline,cache leader=- chosen=inline

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=127
emitted_size_before=281
emitted_size_after=281
reactive_edges_before=7
reactive_edges_after=7
update_path_before=18
update_path_after=18

[s3-extraction-folio.decisions]
op=3 placement=cache kind=missed reason=regressed-emitted-size span=28:52 size=6 edges=-1 path=-1 budget=127

# entities_raw
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=47
emitted_size_after=47
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# void_and_self_closing
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=34
emitted_size_after=34
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# quote_forms
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=13
emitted_size_after=13
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# dynamic_directives
[s3-placement-folio]

[s3-placement-folio.placements]
op=1 alternatives=inline,cache leader=- chosen=inline

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=127
emitted_size_before=113
emitted_size_after=113
reactive_edges_before=3
reactive_edges_after=3
update_path_before=3
update_path_after=3

[s3-extraction-folio.decisions]
op=1 placement=cache kind=missed reason=regressed-emitted-size span=3:30 size=6 edges=-1 path=-1 budget=127

# comments
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=7
emitted_size_after=7
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# interpolation_spacing
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=50
emitted_size_after=50
reactive_edges_before=1
reactive_edges_after=1
update_path_before=1
update_path_after=1

# multi_root
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=14
emitted_size_after=14
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# crlf
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=11
emitted_size_after=11
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# unicode
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=70
emitted_size_after=70
reactive_edges_before=1
reactive_edges_after=1
update_path_before=1
update_path_after=1

# svg_self_closing
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=32
emitted_size_after=32
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# pre_whitespace
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=17
emitted_size_after=17
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# rcdata_textarea_title
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=62
emitted_size_after=62
reactive_edges_before=1
reactive_edges_after=1
update_path_before=1
update_path_after=1

# rcdata_script_style
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=55
emitted_size_after=55
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# nested_template
[s3-placement-folio]

[s3-placement-folio.placements]
op=2 alternatives=inline,hoist leader=- chosen=hoist

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=127
emitted_size_before=95
emitted_size_after=82
reactive_edges_before=1
reactive_edges_after=1
update_path_before=4
update_path_after=3

[s3-extraction-folio.decisions]
op=2 placement=hoist kind=applied reason=committed span=34:48 size=-13 edges=0 path=-1 budget=127

# close_tag_whitespace
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=8
emitted_size_after=8
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# eof_in_tag
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=7
emitted_size_after=7
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# eof_in_tag_ws
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=7
emitted_size_after=7
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# eof_in_attr_name
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=10
emitted_size_after=10
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# eof_in_quoted_value
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=9
emitted_size_after=9
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# eof_in_empty_quoted_value
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=8
emitted_size_after=8
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# unclosed_child
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=15
emitted_size_after=15
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# stray_close
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=0
emitted_size_after=0
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# extra_close
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=7
emitted_size_after=7
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# empty_close
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=1
emitted_size_after=1
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# eof_in_close
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=0
emitted_size_after=0
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# eof_after_close_slash
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=0
emitted_size_after=0
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# missing_attr_value
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=8
emitted_size_after=8
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# solidus_junk
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=9
emitted_size_after=9
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# attr_quote_no_eq
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=10
emitted_size_after=10
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# missing_attr_whitespace
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=12
emitted_size_after=12
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# close_tag_junk
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=8
emitted_size_after=8
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# unclosed_interpolation
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=6
emitted_size_after=6
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# unclosed_comment
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=0
emitted_size_after=0
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# abrupt_empty_comment
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=1
emitted_size_after=1
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# bogus_doctype
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=8
emitted_size_after=8
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# bogus_one_dash
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=8
emitted_size_after=8
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# processing_instruction
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=0
emitted_size_after=0
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# cdata_in_svg
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=11
emitted_size_after=11
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# unquoted_slash_value
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=14
emitted_size_after=14
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# case_insensitive_close
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=46
emitted_size_after=46
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0

# sibling_li_nests_v1
[s3-placement-folio]

[s3-extraction-folio]
tier=O3
candidate_budget=128
budget_left=128
emitted_size_before=14
emitted_size_after=14
reactive_edges_before=0
reactive_edges_after=0
update_path_before=0
update_path_after=0
